<resources>
    <string name="app_name">FParking</string>
    <string name="title_activity_home">FParking</string>
    <string name="title_activity_direction">Chỉ đường</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="phone"> Số điện thoại</string>
    <string name="passowrd"> Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="show_pwd">Hiện mật khẩu</string>
    <string name="hide_pwd">Ẩn mật khẩu</string>
    <string name="forgot">Quên mật khẩu?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Bạn chưa có tài khoản? Đăng ký</string>
    <string name="fullName">Họ tên</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Nhập lại mật khẩu</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">ĐĂNG KÝ</string>
    <string name="already_user">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="registered_phone">Vui lòng nhập số điện thoại đã đăng ký vào đây:</string>
    <string name="submit">TIẾP THEO</string>
    <string name="back">BACK</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="otp">Nhập mã xác thực</string>
    <string name="notiOtp">Một mã xác thực đã được gửi đến</string>
    <string name="reSentOtp">GỬI LẠI OTP</string>
    <string name="changePhoneNumber">ĐỔI SĐT</string>

    <string name="app_id">482599222202957</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">0f97a316c95c7ff1e124eb6fb833c233</string>
    <string name="ak_login_protocol_scheme">ak465871913602533</string>
</resources>
