<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/backToLoginBtn"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_action_back" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="Xác thực tài khoản"
        android:textColor="@color/white_greyish"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/notiOtp"
            android:textColor="#A4A4A4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="01647383196"
            android:textColor="@color/white_greyish"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/otp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/otp"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/summitBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_selector"
                android:padding="3dp"
                android:shadowRadius="10"
                android:text="@string/confirm"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/reSentOtp"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="47dp"
        android:text="@string/reSentOtp"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/changePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="47dp"
        android:text="@string/changePhoneNumber"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />
</RelativeLayout>