<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_action_back" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="Đăng ký"
        android:textColor="@color/white_greyish"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"

            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_selector"
            android:padding="3dp"
            android:shadowRadius="10"
            android:text="@string/signUp"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>