<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/backToLoginBtn"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_action_back" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="Lấy lại mật khẩu qua SMS"
        android:textColor="@color/white_greyish"
        android:textSize="15sp"
        android:textStyle="bold" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registered_phone"
            android:textColor="@color/white_greyish"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_action_phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/whitetext"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_selector"
                android:padding="3dp"
                android:shadowRadius="10"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>