<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/car"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="196dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/logoapp" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Số điện thoại"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginBottom="15dp"
            android:background="@color/white_greyish" />


        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Mật khẩu"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/white_greyish"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/button_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>